--- a/src/ng-select/ng-select.component.html
+++ b/src/ng-select/ng-select.component.html
@@ -1,6 +1,6 @@
 <div (mousedown)="handleMousedown($event)" [class.ng-has-value]="hasValue" class="ng-select-container">
     <div class="ng-value-container">
-        <div class="ng-placeholder">{{placeholder}}</div>
+        <div class="ng-placeholder" [id]="dropdownId + '-placeholder'">{{placeholder}}</div>
 
         <ng-container *ngIf="!multiLabelTemplate && selectedItems.length > 0">
             <div [class.ng-value-disabled]="item.disabled" class="ng-value" *ngFor="let item of selectedItems">
@@ -37,6 +37,7 @@
                    (blur)="onInputBlur($event)"
                    (change)="$event.stopPropagation()"
                    role="combobox"
+                   [attr.aria-labelledby]="dropdownId + '-placeholder'"
                    [attr.aria-expanded]="isOpen"
                    [attr.aria-owns]="isOpen ? dropdownId : null"
                    [attr.aria-activedescendant]="isOpen ? itemsList?.markedItem?.htmlId : null">
